--- a/src/main/webapp/customer-get.html
+++ b/src/main/webapp/customer-get.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online Sales Product List</title>
+  <title>Online Sales Customer List</title>
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-NmQOjQZZfTkJFwgoaowJfcdEiO2/t0zGzpt1CQVGoBb9tKsmNlbTOpPpKpI1qqwp" crossorigin="anonymous">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -26,37 +26,37 @@
     async function fetchProducts() {
       try {
         // Fetch the API data
-        const response = await fetch('http://localhost:8080/products');
-        const products = await response.json();
+        const response = await fetch('http://localhost:8080/customers');
+        const customers = await response.json();
 
         // Get the table body element
         const tableBody = document.getElementById('table-body');
 
         // Loop through the data and add it to the table
-        products.forEach(product => {
+        customers.forEach(customer => {
           const row = document.createElement('tr');
 
           // Create cells for id, name, and price
           const idCell = document.createElement('td');
           const nameCell = document.createElement('td');
-          const priceCell = document.createElement('td');
+          const emailCell = document.createElement('td');
 
           // Set the cell values
-          idCell.innerText = product.id;
-          nameCell.innerText = product.name;
-          priceCell.innerText = product.price;
+          idCell.innerText = customer.id;
+          nameCell.innerText = customer.name;
+          emailCell.innerText = customer.email;
 
           // Append the cells to the row
           row.appendChild(idCell);
           row.appendChild(nameCell);
-          row.appendChild(priceCell);
+          row.appendChild(emailCell);
 
           // Append the row to the table body
           tableBody.appendChild(row);
         });
       } catch (error) {
-        console.error('Error fetching products:', error);
-        document.getElementById('error').innerText = 'Error fetching product data.';
+        console.error('Error fetching customers:', error);
+        document.getElementById('error').innerText = 'Error fetching customers data.';
       }
     }
 
@@ -69,10 +69,10 @@
 
 <body >
  <div class="content">
-  <h1>Product List</h1>
+  <h1>Customer List</h1>
   
     <div class="container mt-5">
-    <h2 class="text-center">Online Sales Product List</h2>
+    <h2 class="text-center">Online Sales Customer List</h2>
     
   <!-- Table to display the products -->
    <table class="table table-striped table-bordered">
