--- a/src/main/webapp/order-post.html
+++ b/src/main/webapp/order-post.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Online Sales Enter Product</title>
+<title>Online Sales Enter Order</title>
   <!-- Bootstrap CSS CDN -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-NmQOjQZZfTkJFwgoaowJfcdEiO2/t0zGzpt1CQVGoBb9tKsmNlbTOpPpKpI1qqwp" crossorigin="anonymous">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -23,21 +23,26 @@
 <body>
   
 <div class="container mt-5">
-<h2 class="text-left">Save New Product</h2>
+<h2 class="text-left">Enter New Order</h2>
 <br>
-<form id="productForm">
-  <label for="name">Product Name:</label>
-  <input type="text" id="name" name="name" required>
-
-  <label for="price">Price:</label>
-  <input type="number" id="price" name="price" required>
+<form id="orderForm">
+  <label for="productId">Product ID:</label>
+  <select name="productId" id="productId">     
+    <option value="1001">Rigatoni - 1001</option>
+    <option value="1002">Dave - 1002</option>
+    <option value="1003">Pumpernickel - 1003</option>
+    <option value="1004">Reeses - 1004</option>
+  </select>
+  
+  <label for="quantity">Quantity:</label>
+  <input type="number" id="quantity" name="quantity" required>
 
   <button type="submit">Submit</button>
 </form>
 
 
 <!-- Link to your JavaScript file -->
-<script src="products_app.js"></script>
+<script src="order_app.js"></script>
 
 <!-- Bootstrap JS, Popper.js, and jQuery (optional but useful for components) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Q4A4HlX2xt9y2zjxwSLPxyPgplFdZ8bhUETm0h+rB/Lsl+5iMljhOS2N6LFzO0uI" crossorigin="anonymous"></script>
