--- a/src/main/webapp/customer-get.html
+++ b/src/main/webapp/customer-get.html
@@ -26,7 +26,7 @@
     async function fetchProducts() {
       try {
         // Fetch the API data
-        const response = await fetch('http://localhost:8080/customers');
+        const response = await fetch('http://localhost:8080/customerservice/customers');
         const customers = await response.json();
 
         // Get the table body element
