--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Online Sales Website</title>
+<title>Online Sales Website V1</title>
 <style>
 table {
   font-family: arial, sans-serif;
